<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Item_Inicio"
        android:title="@string/item_inicio"
        android:icon="@drawable/ic_inicio"
    />
    <item
        android:id="@+id/item_Eventos"
        android:title="@string/item_Eventos"
        android:icon="@drawable/ic_evento"
        />
    <item
<<<<<<< HEAD
        android:id="@+id/item_Escaneo"
        android:title="@string/item_Escaneo"
=======
        android:id="@+id/item_Contacto"
        android:title="@string/item_Contacto"
>>>>>>> 1133e46a88e0c992622e22ee7e888cb635e24087
        android:enabled="false"
        android:icon="@drawable/ic_contacto"
        />
    <item
        android:id="@+id/item_Cuenta"
        android:title="@string/item_Cuenta"
        android:icon="@drawable/ic_cuenta"
        />
    <item
<<<<<<< HEAD
        android:id="@+id/item_Contacto"
        android:title="@string/item_Contacto"
=======
        android:id="@+id/item_Anuncios"
        android:title="@string/item_Anuncios"
>>>>>>> 1133e46a88e0c992622e22ee7e888cb635e24087
        android:icon="@drawable/ic_anuncios"
        />

</menu>